<resources>
    <string name="loading">Loading…</string>
    <string name="synchronizing">Synchronizing…</string>
    <string name="string_ok">OK</string>
    <string name="string_yes">Yes</string>
    <string name="string_no">No</string>
    <string name="string_continue">Continue</string>
    <string name="string_change">Change</string>
    <string name="string_cancel">CANCEL</string>
    <string name="string_paste">Paste</string>
    <string name="string_paste_address">Paste %1$s</string>
    <string name="string_search">Search</string>
    <string name="string_done">DONE</string>
    <string name="string_rename">Rename</string>
    <string name="string_delete">Delete</string>
    <string name="string_save">Save</string>
    <string name="string_back">BACK</string>
    <string name="string_next">NEXT</string>
    <string name="string_skip">SKIP</string>
    <string name="string_total">TOTAL:</string>
    <string name="string_finish">FINISH</string>
    <string name="string_help">Help</string>
    <string name="string_info">Info</string>
    <string name="string_refresh">Refresh</string>
    <string name="string_loading">Loading...</string>
    <string name="string_no_transactions">No transactions</string>
    <string name="string_back_button">Back button returns to the previous screen</string>
    <string name="string_help_button">Help button shows help for this screen</string>
    <string name="string_add_button">Add button adds a new wallet</string>
    <string name="string_payment_received">** Payment Received **</string>
    <string name="string_exit_app_question">"Would you like to exit %1$s?"</string>
    <string name="string_too_short">too short</string>
    <string name="string_agree">Agree</string>
    <string name="loading_wallets">Loading Wallets...\nThis may take a few minutes as it is the first time logging into this device.</string>
    <string name="loading_n_wallets">Loading %1$d of %2$d wallets.\nThis may take a few minutes as it is the first time logging into this device.</string>
    <string name="loading_transactions">Loading Transactions...</string>
    <string name="nav_bar_directory_text">DIRECTORY</string>
    <string name="nav_bar_request_text">RECEIVE</string>
    <string name="nav_bar_send_text">SEND</string>
    <string name="nav_bar_wallets_text">WALLETS</string>
    <string name="nav_bar_more_text">MORE</string>
    <string name="calculator_back">&lt;&#160;Del</string>
    <string name="calculator_done">Done</string>
    <string name="string_connection_problem_title">Connection Problem</string>
    <string name="string_no_connection_title">No connection</string>
    <string name="string_no_connection_message">Please turn on WiFi or Mobile Data</string>
    <string name="string_no_connection_pin_message">You are offline but can still login to your account.</string>
    <string name="string_no_connection_response">There is a problem reaching the server. Please try again.</string>
    <string name="string_connection_error_server">Connection Error: Cannot reach server</string>
    <string name="directory_title">Directory</string>
    <string name="restaurants">Restaurants</string>
    <string name="restaurant_and_food_trucks">Restaurants &amp; Food Trucks</string>
    <string name="gift_cards">Gift Cards</string>
    <string name="coffee_and_tea">Coffee &amp; Tea</string>
    <string name="electronics">Electronics</string>
    <string name="atms">ATMs</string>
    <string name="shopping">Shopping</string>
    <string name="more_categories">More Categories</string>
    <string name="current_location">Current Location</string>
    <string name="on_the_web">On the Web</string>
    <string name="category_or_business_name_initial">Search</string>
    <string name="category_or_business_name">Business Name or Category</string>
    <string name="city_state_county">City, State/Province, or Country</string>
    <string name="your_location">Your Location</string>
    <string name="location">Location...</string>
    <string name="near_you">Near You</string>
    <string name="no_results_found">No Results Found</string>
    <string name="no_location_found">Unable to get a current location. Please enable Location Services.</string>
    <string name="location_enable">Enable</string>
    <string name="fragment_business_no_results">No Results Found</string>
    <string name="fragment_business_cannot_retrieve_data">Can not retrieve data</string>
    <string name="fragment_business_enable_location_services">Enable location services for better results</string>
    <string name="fragment_business_no_categories_retreived">No categories retrieved from server</string>
    <string name="fragment_business_near_you">Near You</string>
    <string name="fragment_take_picture">Picture or File</string>
    <string name="keep">Keep</string>
    <string name="discard">Discard</string>
    <string name="fragment_directory_detail_getting_venue_data">Getting venue data…</string>
    <string name="fragment_directory_detail_timeout_retrieving_data">Timeout retrieving data…</string>
    <string name="fragment_directory_detail_directions">Directions</string>
    <string name="fragment_directory_detail_discount">"Discount "</string>
    <string name="fragment_directory_detail_no_phone">No Activity installed to handle a phone call.</string>
    <string name="fragment_directory_detail_share">"Share"</string>
    <string name="fragment_directory_detail_facebook">"Facebook"</string>
    <string name="fragment_directory_detail_twitter">"Twitter"</string>
    <string name="fragment_directory_detail_yelp">"Yelp"</string>
    <string name="fragment_directory_detail_foursquare">"Foursquare"</string>
    <string name="server_error_account_already_exists">This account already exists.</string>
    <string name="server_error_account_does_not_exists">We were unable to find your account. Be sure your username is correct.</string>
    <string name="server_error_bad_password">Incorrect password.</string>
    <string name="server_error_wallet_exists">Wallet already exists.</string>
    <string name="server_error_invalid_wallet">Wallet does not exist.</string>
    <string name="server_error_no_connection">Unable to connect to server. Please try again later.</string>
    <string name="server_error_no_recovery_questions">No recovery questions are available for this user</string>
    <string name="server_error_not_supported">This operation is not supported.</string>
    <string name="server_error_insufficient_funds">Insufficient funds</string>
    <string name="server_error_synchronizing">Synchronizing with the network.</string>
    <string name="server_error_non_numeric_pin">PIN must be a numeric value.</string>
    <string name="server_error_bad_pin">Invalid PIN</string>
    <string name="server_error_bad_pin_login">Invalid PIN. Please log in.</string>
    <string name="server_error_pin_expired">PIN has expired. Please log in.</string>
    <string name="server_error_invalid_pin_wait">Too many failed login attempts. Please try again in %1$s seconds.</string>
    <string name="server_error_other">An error has occurred.</string>
    <string name="fragment_landing_logo_description">An image of the logo</string>
    <string name="fragment_landing_detail_text">Bitcoin Wallet</string>
    <string name="fragment_landing_swipe_text">Swipe to View Business Directory</string>
    <string name="fragment_landing_arrow_description">Bouncing Arrow</string>
    <string name="fragment_landing_username_hint">User Name</string>
    <string name="fragment_landing_password_hint">Password</string>
    <string name="fragment_landing_signin_button">Sign In</string>
    <string name="fragment_landing_signup_button">Sign Up</string>
    <string name="fragment_landing_forgot_password">Forgot Password</string>
    <string name="fragment_landing_please_enter_pin">Enter PIN for (%1$s)</string>
    <string name="fragment_landing_current_user">Current User (%1$s)</string>
    <string name="fragment_landing_switch_user">Exit PIN Login</string>
    <string name="fragment_landing_forgot_pin">Forgot PIN</string>
    <string name="fragment_forgot_no_username_title">User Name Required</string>
    <string name="fragment_forgot_no_account_title">No Recovery Questions</string>
    <string name="fragment_forgot_no_recovery_questions_title">No Recovery Questions</string>
    <string name="fragment_forgot_no_recovery_questions_text">This user does not have any recovery questions set!</string>
    <string name="fragment_landing_account_delete_title">Delete Account</string>
    <string name="fragment_landing_account_delete_message">Delete %1$s on this device only? This will remove the 2FA and PIN access from this device. If 2FA is enabled on this account, you will be unable to access this account for 7 days from new devices</string>
    <string name="activity_signup_title">Sign Up</string>
    <string name="activity_navigation_signin_failed">Sign-in failed</string>
    <string name="activity_navigation_signin_failed_unexpected">Sign-in failed unexpectedly</string>
    <string name="activity_signup_failed">Sign Up Failed</string>
    <string name="activity_change_password_failed">Change Password Failed</string>
    <string name="activity_change_pin_failed">Change PIN Failed</string>
    <string name="fragment_signup_creating_account">Creating and securing account…</string>
    <string name="fragment_signup_creating_wallet">Creating and securing wallet…</string>
    <string name="activity_signup_title_change_password">Change Password</string>
    <string name="activity_signup_title_change_password_via_questions">Change Password</string>
    <string name="activity_signup_title_change_pin">Change PIN</string>
    <string name="activity_signup_username_hint">User Name</string>
    <string name="activity_signup_password_hint">Choose a Password</string>
    <string name="activity_signup_password">Password</string>
    <string name="activity_signup_password_confirm_hint">Re-enter Password</string>
    <string name="activity_signup_current_password">Current Password</string>
    <string name="activity_signup_old_password">Old Password</string>
    <string name="activity_signup_new_password">New Password</string>
    <string name="activity_signup_new_password_confirm">Re-enter New Password</string>
    <string name="activity_signup_pin_label">4 Digit PIN</string>
    <string name="activity_signup_pin_hint">Create PIN</string>
    <string name="activity_signup_new_pin">New PIN</string>
    <string name="activity_signup_password_requirements">Password Requirements</string>
    <string name="activity_signup_password_help">Password must have an upper and lower case letter, a number, and a minimum 10 characters</string>
    <string name="activity_signup_popup_uppercase">Must have at least one upper case letter</string>
    <string name="activity_signup_popup_lowercase">Must have at least one lower case letter</string>
    <string name="activity_signup_popup_number">Must have at least one number</string>
    <string name="activity_signup_popup_length">Must have at least 10 characters</string>
    <string name="activity_signup_pin_change_good">PIN successfully changed.</string>
    <string name="activity_signup_pin_change_bad">PIN could not be changed.</string>
    <string name="activity_signup_pin_change_title">Change PIN</string>
    <string name="activity_signup_password_change_title">Change Password</string>
    <string name="activity_signup_password_change_good">Password successfully changed.</string>
    <string name="fragment_electrum_server_show_instruction">To use your own Electrum Server instead of the Airbitz servers.</string>
    <string name="fragment_electrum_server_airbitz_toggle_title">Use Airbitz Servers</string>
    <string name="fragment_electrum_server_save">Save</string>
    <string name="fragment_electrum_server_hint_text">URI:Port</string>
    <string name="fragment_electrum_server_ssl_toggle_title">SSL</string>
</resources>